--- a/hobies.html
+++ b/hobies.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <ol>
