--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+  <head
     <meta charset="utf-8">
     <title>Ali's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body >
     <table cellspacing="22">
       <th>
         <td>  <img src="images/profile.jpg" alt="Ali profile picture"></td>
